templates/userservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authservice
spec:
  selector:
    app: authservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8085  # Port the service listens on
