templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: authservice
                port:
                  number: 80
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: orderservice
                port:
                  number: 80
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: userservice
                port:
                  number: 80
          - path: /workers
            pathType: Prefix
            backend:
              service:
                name: workerservice
                port:
                  number: 80
